--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </div>
     </header>
     <main>
-        <section class="main-section" id="main-search">
+        <section class="main-section search-section" id="main-search">
             <h1 role="heading">Поиск посуточного жилья</h1>
-            <h2>Множество вариантов заселения специально для Вас!</h2>
-            <form action="/rentals/index.html" class="search-form">
+            <h3>Множество вариантов заселения специально для Вас!</h3>
+            <form action="./rentals/index.html" class="search-form">
                 <div class="search-form-content">
                     <div class="main__search-city">
                         <div class="search-form-info">Выбор города</div>
@@ -64,8 +64,79 @@
                     <input type="submit" value="Поиск жилья" class="main__search-btn">
                 </div>
             </form>
-            
         </section>
+
+        <div class="sections-container">
+            <section class="main-section recommend-section" id="main-recommend">
+                <h2 role="heading">Популярные направления</h2>
+                <ul class="recommend-list">
+                    <li class="recommend-card">
+                        <figure>
+                            <img src="img/main/recommends/abkhazia.jpg" alt="" class="recommend-img">
+                            <figcaption>Абхазия</figcaption>
+                        </figure>
+                    </li>
+                    <li class="recommend-card">
+                        <figure>
+                            <img src="img/main/recommends/altai.jpg" alt="" class="recommend-img">
+                            <figcaption>Алтай</figcaption>
+                        </figure>
+                    </li>
+                    <li class="recommend-card">
+                        <figure>
+                            <img src="img/main/recommends/criema.jpg" alt="" class="recommend-img">
+                            <figcaption>Крым</figcaption>
+                        </figure>
+                    </li>
+                    <li class="recommend-card">
+                        <figure>
+                            <img src="img/main/recommends/sochi.jpg" alt="" class="recommend-img">
+                            <figcaption>Сочи</figcaption>
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="main-section advantages-section" id="main-advantages">
+                <h2 role="heading">Удобный сервис для сдачи и поиска жилья</h2>
+                <ul class="advantages-list">
+                    <li class="advantages-list__item">
+                        <img src="img/main/advantages_icons/house.svg" alt="" class="advantages-icon">
+                        <h4>Лучшие условия проживания</h4>
+                        <p>Сервис поможет подобрать Вам идельное жилье, исходя из указанных Вами критериев</p>
+                    </li>
+                    <li class="advantages-list__item">
+                            <img src="img/main/advantages_icons/guarant.svg" alt="" class="advantages-icon">
+                        <h4>Гарантия заселения</h4>
+                        <p>Мы гарантируем только проверенных продавцов с гарантией Вашего размещения в указанную дату</p>
+                    </li>
+                    <li class="advantages-list__item">
+                            <img src="img/main/advantages_icons/ruble.svg" alt="" class="advantages-icon">
+                        <h4>Бесплатное размещение</h4>
+                        <p>У Вас есть возможность разместить объявление об аренде жилья на сайте абсолюно бесплатно</p>
+                    </li>
+                    <li class="advantages-list__item">
+                            <img src="img/main/advantages_icons/tourist.svg" alt="" class="advantages-icon">
+                        <h4>Надежные покупатели</h4>
+                        <p>Сервис гарантирует продавцам только добросовестных клинтов, которые приедут в указанную дату</p>
+                    </li>
+                    <li class="advantages-list__item">
+                            <img src="img/main/advantages_icons/locations.svg" alt="" class="advantages-icon">
+                        <h4>Множество гостей и вариантов</h4>
+                        <p>Благодаря популярности сервиса, и продавцы, и покупатели по всему миру смогут найти друг друга</p>
+                        <p></p>
+                    </li>
+                </ul>
+            </section>
+            <section class="main-section contacts-section" id="main-contacts">
+                <h2 role="heading">Контакты</h2>
+                <p>Связаться с нами можно в любое время суток!</p> 
+                <p>В случае проблем с размещением или с любыми другими Вашими вопросами вы можете 
+                    обратиться к нам одним из множества доступных способов:</p>
+            </section>
+        </div> <!--sections-container-->
+        
+
     </main>
 </body>
 </html>
