first page design

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>DAILY rental housing</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Arimo:400,700|Playfair+Display:400,700i,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="main-header">
@@ -65,10 +66,11 @@
                 </div>
             </form>
         </section>
-
+        
         <div class="sections-container">
             <section class="main-section recommend-section" id="main-recommend">
                 <h2 role="heading">Популярные направления</h2>
+                <p class="heading-definition">Места, которые мы рекомендуем Вам посетить</p>
                 <ul class="recommend-list">
                     <li class="recommend-card">
                         <figure>
@@ -99,6 +101,7 @@
 
             <section class="main-section advantages-section" id="main-advantages">
                 <h2 role="heading">Удобный сервис для сдачи и поиска жилья</h2>
+                <p class="heading-definition">Выбирая <span class="dialy-mention">DIALY renal housing</span>, вы получаете следующие преимущества</p>
                 <ul class="advantages-list">
                     <li class="advantages-list__item">
                         <img src="img/main/advantages_icons/house.svg" alt="" class="advantages-icon">
@@ -106,23 +109,23 @@
                         <p>Сервис поможет подобрать Вам идельное жилье, исходя из указанных Вами критериев</p>
                     </li>
                     <li class="advantages-list__item">
-                            <img src="img/main/advantages_icons/guarant.svg" alt="" class="advantages-icon">
+                        <img src="img/main/advantages_icons/guarant.svg" alt="" class="advantages-icon">
                         <h4>Гарантия заселения</h4>
                         <p>Мы гарантируем только проверенных продавцов с гарантией Вашего размещения в указанную дату</p>
                     </li>
                     <li class="advantages-list__item">
-                            <img src="img/main/advantages_icons/ruble.svg" alt="" class="advantages-icon">
+                        <img src="img/main/advantages_icons/ruble.svg" alt="" class="advantages-icon">
                         <h4>Бесплатное размещение</h4>
                         <p>У Вас есть возможность разместить объявление об аренде жилья на сайте абсолюно бесплатно</p>
                     </li>
                     <li class="advantages-list__item">
-                            <img src="img/main/advantages_icons/tourist.svg" alt="" class="advantages-icon">
+                        <img src="img/main/advantages_icons/tourist.svg" alt="" class="advantages-icon">
                         <h4>Надежные покупатели</h4>
                         <p>Сервис гарантирует продавцам только добросовестных клинтов, которые приедут в указанную дату</p>
                     </li>
                     <li class="advantages-list__item">
                             <img src="img/main/advantages_icons/locations.svg" alt="" class="advantages-icon">
-                        <h4>Множество гостей и вариантов</h4>
+                        <h4>Множество гостей и&nbsp;вариантов</h4>
                         <p>Благодаря популярности сервиса, и продавцы, и покупатели по всему миру смогут найти друг друга</p>
                         <p></p>
                     </li>
@@ -130,13 +133,77 @@
             </section>
             <section class="main-section contacts-section" id="main-contacts">
                 <h2 role="heading">Контакты</h2>
-                <p>Связаться с нами можно в любое время суток!</p> 
-                <p>В случае проблем с размещением или с любыми другими Вашими вопросами вы можете 
+                <p class="heading-definition">Связаться с нами можно в любое время суток!
+                    <br/>
+                    В случае проблем с размещением или с любыми другими Вашими вопросами вы можете 
                     обратиться к нам одним из множества доступных способов:</p>
+                <ul class="contacts-list">
+                    <li class="contacts-list__item">
+                        По телефону: <a href="tel:+79217482260">8 921 748 22 60</a>
+                    </li>
+                    <li class="contacts-list__item">
+                        По электронной почте: <a href="mailto:rental-housing@daily.com">rental-housing@daily.com</a>
+                    </li>
+                    <li class="contacts-list__item">
+                        В социальных сетях:
+                        <ul class="socials-list">
+                            <li class="socials-list__item">
+                                Вконтакте: <a href="https://vk.com/dialy.rent">vk.com/dialy.rent</a>
+                            </li>
+                            <li class="socials-list__item">
+                                Facebook: <a href="https://facebook.com/dialy.rent">facebook.com/dialy.rent</a>
+                            </li>
+                            <li class="socials-list__item">
+                                Twitter: <a href="https://twitter.com/dialy.rent">twitter.com/dialy.rent</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </section>
         </div> <!--sections-container-->
-        
-
     </main>
+
+    <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-top">
+                <div class="foolter-col">
+                    <ul class="foolter-col-list">
+                        <li class="foolter-col-list__item"><a href="#">Личный кабинет</a></li>
+                        <li class="foolter-col-list__item"><a href="#">Служба поддержки</a></li>
+                    </ul>
+                </div>
+                <div class="foolter-col">
+                    <ul class="foolter-col-list">
+                        <li>Арендодателям</li>
+                        <li class="foolter-col-list__item"><a href="#">Как сдавать свое жилье</a></li>
+                        <li class="foolter-col-list__item"><a href="#">Разместить объявление</a></li>
+                    </ul>
+                </div>
+                <div class="foolter-col">
+                    <ul class="foolter-col-list">
+                        <li>Гостям</li>
+                        <li class="foolter-col-list__item"><a href="#">Как бронировать жилье</a></li>
+                        <li class="foolter-col-list__item"><a href="#">Гарантии заселения</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="copy">
+                    &copy; 2019. DAILY rental housing
+                </div>
+                <ul class="socials-list">
+                    <li class="socials-list__item">
+                        <a href="https://vk.com" target="_blank"></a>
+                    </li>
+                    <li class="socials-list__item">
+                        <a href="https://facebook.com" target="_blank"></a>
+                    </li>
+                    <li class="socials-list__item">
+                        <a href="https://twitter.com" target="_blank"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
