--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/main_page.css">
     <title>DAILY rental housing</title>
 
     <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&display=swap" rel="stylesheet">
@@ -45,7 +46,7 @@
         <section class="main-section search-section" id="main-search">
             <h1 role="heading">Поиск посуточного жилья</h1>
             <h3>Множество вариантов заселения специально для Вас!</h3>
-            <form action="./rentals/index.html" class="search-form">
+            <form action="./rentals.html" class="search-form">
                 <div class="search-form-content">
                     <div class="main__search-city">
                         <div class="search-form-info">Выбор города</div>
@@ -187,19 +188,26 @@
                     </ul>
                 </div>
             </div>
+            <hr class="footer-line"/>
             <div class="footer-bottom">
                 <div class="copy">
                     &copy; 2019. DAILY rental housing
                 </div>
                 <ul class="socials-list">
                     <li class="socials-list__item">
-                        <a href="https://vk.com" target="_blank"></a>
+                        <a href="https://vk.com" target="_blank">
+                            <img src="img/icons/socials/vk.png" alt="vk">
+                        </a>
                     </li>
                     <li class="socials-list__item">
-                        <a href="https://facebook.com" target="_blank"></a>
+                        <a href="https://facebook.com" target="_blank">
+                            <img src="img/icons/socials/facebook.png" alt="facebook">
+                        </a>
                     </li>
                     <li class="socials-list__item">
-                        <a href="https://twitter.com" target="_blank"></a>
+                        <a href="https://twitter.com" target="_blank">
+                            <img src="img/icons/socials/twitter.png" alt="twitter">
+                        </a>
                     </li>
                 </ul>
             </div>
