--- a/housing.html
+++ b/housing.html
@@ -12,25 +12,25 @@
 <body>
         <header class="main-header">
             <div class="header__logo">
-                <a href="#"><img src="img/logo.png" alt="DAILY"></a>
+                <a href="index.html"><img src="img/logo.png" alt="DAILY"></a>
             </div>
             <nav role="navigation">
                 <ul class="main-navigation">
                     <li class="main-navigation__item">
                         <img src="img/icons/search.svg" alt="" class="nav-icon">
-                        <a href="#main-search">Поиск</a>
+                        <a href="index.html#main-search">Поиск</a>
                     </li>
                     <li class="main-navigation__item">
                         <img src="img/icons/recommend.svg" alt="" class="nav-icon">
-                        <a href="#main-recommend">Рекомедации</a>
+                        <a href="index.html#main-recommend">Рекомедации</a>
                     </li>
                     <li class="main-navigation__item">
                         <img src="img/icons/advantages.svg" alt="" class="nav-icon">
-                        <a href="#main-advantages">Преимущества</a>
+                        <a href="index.html#main-advantages">Преимущества</a>
                     </li>
                     <li class="main-navigation__item last-nav-li">
                         <img src="img/icons/contacts.svg" alt="" class="nav-icon">
-                        <a href="#main-contacts">Контакты</a>
+                        <a href="index.html#main-contacts">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -41,6 +41,28 @@
             </div>
         </header>
 
+        <main class="housing-main">
+            <div class="options-wrapper">
+                <ul class="options-list">
+                    <li class="options-list__item">
+                        <p class="option-name">Город:</p>
+                        <input type="text" name="city-input" value="Москва">
+                    </li>
+                    <li class="options-list__item">
+                        <p class="option-name">Дата заезда:</p>
+                        <input type="date" name="arrival-input">
+                    </li>
+                    <li class="options-list__item">
+                        <p class="option-name">Дата отъезда:</p>
+                        <input type="date" name="departure-input">
+                    </li>
+                </ul>
+            </div>
+
+            <div class="photos-wrapper">
+                
+            </div>
+        </main>
         
 </body>
 </html>
