--- a/rentals.html
+++ b/rentals.html
@@ -13,25 +13,25 @@
 <body>
     <header class="main-header">
         <div class="header__logo">
-            <a href="#"><img src="img/logo.png" alt="DAILY"></a>
+            <a href="index.html"><img src="img/logo.png" alt="DAILY"></a>
         </div>
         <nav role="navigation">
             <ul class="main-navigation">
                 <li class="main-navigation__item">
                     <img src="img/icons/search.svg" alt="" class="nav-icon">
-                    <a href="#main-search">Поиск</a>
+                    <a href="index.html#main-search">Поиск</a>
                 </li>
                 <li class="main-navigation__item">
                     <img src="img/icons/recommend.svg" alt="" class="nav-icon">
-                    <a href="#main-recommend">Рекомедации</a>
+                    <a href="index.html#main-recommend">Рекомедации</a>
                 </li>
                 <li class="main-navigation__item">
                     <img src="img/icons/advantages.svg" alt="" class="nav-icon">
-                    <a href="#main-advantages">Преимущества</a>
+                    <a href="index.html#main-advantages">Преимущества</a>
                 </li>
                 <li class="main-navigation__item last-nav-li">
                     <img src="img/icons/contacts.svg" alt="" class="nav-icon">
-                    <a href="#main-contacts">Контакты</a>
+                    <a href="index.html#main-contacts">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -55,19 +55,19 @@
 
             <div class="options-container">
                 <div class="city-option">
-                    <p>Город:</p>
+                    <p class="option-name">Город:</p>
                     <input type="text" name="city-input" value="Москва">
                 </div>
                 <div class="arrival-option">
-                    <p>Дата заезда:</p>
+                    <p class="option-name">Дата заезда:</p>
                     <input type="date" name="arrival-input">
                 </div>
                 <div class="departure-option">
-                    <p>Дата отъезда:</p>
+                    <p class="option-name">Дата отъезда:</p>
                     <input type="date" name="departure-input">
                 </div>
                 <div class="price-option">
-                    <p>Цена за сутки:</p>
+                    <p class="option-name">Цена за сутки:</p>
                     От <input type="number" min="0" name="min-price-input">
                     До <input type="number" min="0" name="max-price-input">
                 </div>
