housing card started

--- a/rentals.html
+++ b/rentals.html
@@ -15,7 +15,10 @@
         <div class="header__logo">
             <a href="index.html"><img src="img/logo.png" alt="DAILY"></a>
         </div>
+        <input type="checkbox" id="menu-checkbox">
         <nav role="navigation">
+            <label for="menu-checkbox" class="toggle-button" 
+            data-open="Меню" data-close="Закрыть меню" onclick></label>
             <ul class="main-navigation">
                 <li class="main-navigation__item">
                     <img src="img/icons/search.svg" alt="" class="nav-icon">
