--- a/housing.html
+++ b/housing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/housing.css">
     <title>DAILY rental housing</title>
 
     <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&display=swap" rel="stylesheet">
@@ -14,7 +15,10 @@
             <div class="header__logo">
                 <a href="index.html"><img src="img/logo.png" alt="DAILY"></a>
             </div>
+            <input type="checkbox" id="menu-checkbox">
             <nav role="navigation">
+                <label for="menu-checkbox" class="toggle-button" 
+                data-open="Меню" data-close="Закрыть меню" onclick></label>
                 <ul class="main-navigation">
                     <li class="main-navigation__item">
                         <img src="img/icons/search.svg" alt="" class="nav-icon">
@@ -42,7 +46,7 @@
         </header>
 
         <main class="housing-main">
-            <div class="options-wrapper">
+            <section class="options-wrapper">
                 <ul class="options-list">
                     <li class="options-list__item">
                         <p class="option-name">Город:</p>
@@ -57,12 +61,214 @@
                         <input type="date" name="departure-input">
                     </li>
                 </ul>
-            </div>
+            </section>
 
-            <div class="photos-wrapper">
-                
-            </div>
+            <section class="photos-wrapper">
+                <img src="" alt="">
+                <!-- подключить карусель бутстрапа -->
+            </section>
+
+            <section class="short-description">
+                <div class="housing-address">
+                    <img src="img/icons/location.svg" alt="">
+                    Москва, Старая Басманная, 5
+                </div>
+
+                <ul class="stars-rating">
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star-black" src="img/icons/star-black.png" alt="">
+                    </li>
+
+                    <span class="review-count">4</span>
+                </ul>
+            </section>
+
+            <section class="housing-description">
+                <h2 role="heading">Описание</h2>
+                <ul class="descriptions-list">
+                    <li class="descriptions-list__item">
+                        Жилая площадь – 70м<sup>2</sup>
+                    </li>
+                    <li class="descriptions-list__item">
+                        6 этаж из 7, есть лифт
+                    </li>
+                    <li class="descriptions-list__item">
+                        1 км от метро Курская
+                    </li>
+                    <li class="descriptions-list__item">
+                        Безлимитный Wi-Fi
+                    </li>
+                </ul>
+            </section>
+
+            <section class="housing-prices">
+                <h2 role="heading">Цены</h2>
+                <p>Стоимость указана за квартиру целиком в рублях РФ</p>
+                <div class="main-price">
+                    <div class="price-value">8 000₽ за сутки</div>
+                    <div class="price-description">включает проживание не более 6 гостей</div>
+                </div>
+            </section>
+
+            <section class="housing-reviews">
+                <h2 role="heading">Оценка и отзывы</h2>
+                <p>На основании <span class="reviews-count">4</span> отзывов</p>
+
+                <ul class="stars-rating">
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star" src="img/icons/star.png" alt="">
+                    </li>
+                    <li class="stars-rating__item">
+                        <img class="icon-star-black" src="img/icons/star-black.png" alt="">
+                    </li>
+                </ul>
+
+                <div class="rating-container">
+                    <div class="rating-value-box">
+                        4.2
+                    </div>
+                    <ul class="rating-list">
+                        <li class="rating-list__item">
+                            <div class="rating-name">
+                                Чистота
+                            </div>
+                            <div class="rating-value">
+                                <label class="rating__progress-value">4.9</label>
+                                <div class="rating__progress-bar" role="progressbar"></div>
+                            </div>
+                        </li>
+                        <li class="rating-list__item">
+                            <div class="rating-name">
+                                Обслуживание
+                            </div>
+                            <div class="rating-value">
+                                <label class="rating__progress-value">3.9</label>
+                                <div class="rating__progress-bar" role="progressbar"></div>
+                            </div>
+                        </li>
+                        <li class="rating-list__item">
+                            <div class="rating-name">
+                                Цена-качество
+                            </div>
+                            <div class="rating-value">
+                                <label class="rating__progress-value">4.1</label>
+                                <div class="rating__progress-bar" role="progressbar"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div> <!--rating-->
+
+                <div class="reviews-container">
+                    <h3>Отзывы гостей</h3>
+                    <ul class="reviews-list">
+                        <li class="reviews-list__item">
+                            <img src="img/default_avatar.png" alt="" class="guest-avatar">
+                            <div class="comment-top">
+                                <p class="guest-name">Анна</p>
+                                <ul class="stars-rating">
+                                    <li class="stars-rating__item">
+                                        <img class="icon-star" src="img/icons/star.png" alt="">
+                                    </li>
+                                    <li class="stars-rating__item">
+                                        <img class="icon-star" src="img/icons/star.png" alt="">
+                                    </li>
+                                    <li class="stars-rating__item">
+                                        <img class="icon-star" src="img/icons/star.png" alt="">
+                                    </li>
+                                    <li class="stars-rating__item">
+                                        <img class="icon-star" src="img/icons/star.png" alt="">
+                                    </li>
+                                    <li class="stars-rating__item">
+                                        <img class="icon-star-black" src="img/icons/star-black.png" alt="">
+                                    </li>
+                                </ul>
+                                <p class="comment-date">20 мая 2018</p>
+                            </div>
+
+                            <div class="comment-text">
+                                <p class="comment-header">Достоинства</p>
+                                <p class="comment-guest-text">Идеально расположен для любителей ходьбы и кардионагрузок. 
+                                    Кухонных принадлежностей в достатке, хороший холодильник, сантехника, планировка удобная.</p>
+                                <p class="comment-header">Недостатки</p>
+                                <p class="comment-guest-text">Отсутсвие магазинов поблизости.</p>
+                            </div>
+                            <div class="comment-imges"></div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
+
+        <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-top">
+                <div class="foolter-col">
+                    <ul class="foolter-col-list">
+                        <li class="foolter-col-list__item"><a href="#">Личный кабинет</a></li>
+                        <li class="foolter-col-list__item"><a href="#">Служба поддержки</a></li>
+                    </ul>
+                </div>
+                <div class="foolter-col">
+                    <ul class="foolter-col-list">
+                        <li>Арендодателям</li>
+                        <li class="foolter-col-list__item"><a href="#">Как сдавать свое жилье</a></li>
+                        <li class="foolter-col-list__item"><a href="#">Разместить объявление</a></li>
+                    </ul>
+                </div>
+                <div class="foolter-col">
+                    <ul class="foolter-col-list">
+                        <li>Гостям</li>
+                        <li class="foolter-col-list__item"><a href="#">Как бронировать жилье</a></li>
+                        <li class="foolter-col-list__item"><a href="#">Гарантии заселения</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="footer-line"/>
+            <div class="footer-bottom">
+                <div class="copy">
+                    &copy; 2019. DAILY rental housing
+                </div>
+                <ul class="socials-list">
+                    <li class="socials-list__item">
+                        <a href="https://vk.com" target="_blank">
+                            <img src="img/icons/socials/vk.png" alt="vk">
+                        </a>
+                    </li>
+                    <li class="socials-list__item">
+                        <a href="https://facebook.com" target="_blank">
+                            <img src="img/icons/socials/facebook.png" alt="facebook">
+                        </a>
+                    </li>
+                    <li class="socials-list__item">
+                        <a href="https://twitter.com" target="_blank">
+                            <img src="img/icons/socials/twitter.png" alt="twitter">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
         
 </body>
 </html>
